--- a/dev/css/daybox.css
+++ b/dev/css/daybox.css
@@ -10,10 +10,12 @@
   width: 50%;
   max-width: 400px;
   position: absolute;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2), 0px 25px 60px -10px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2), 0px 25px 60px -10px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2), 0px 25px 60px -10px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   overflow: hidden;
-  transition-duration: 2s;
+  -webkit-transition-duration: 2s;
+          transition-duration: 2s;
   cursor: pointer;
 }
 
@@ -30,8 +32,10 @@
   background: linear-gradient(20deg, #19283D 0%, #1D678F 95%);
   background-size: 100% 300%;
   height: 330px;
-  animation: daylight 5s linear both;
-  transition-duration: 0.5s;
+  -webkit-animation: daylight 5s linear both;
+          animation: daylight 5s linear both;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
 }
 
 .top .text_area {
@@ -46,7 +50,8 @@
   font-size: 75px;
   margin-bottom: 0px;
   font-weight: 100;
-  transition-duration: 0.5s;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
 }
 
 .top .text_area .infos {
@@ -55,7 +60,17 @@
   letter-spacing: 1px;
   font-size: 13px;
   opacity: 0.7;
-  transition-duration: 0.5s;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+@-webkit-keyframes daylight {
+  0% {
+    background-position: 100% 30%;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
 }
 
 @keyframes daylight {
@@ -70,21 +85,29 @@
 .daybox_bottom {
   height: 10px;
   background-color: #f3f3f3;
-  transition-duration: 1s;
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
   border-radius: 0px 0px 5px 5px;
-  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .dayweather {
   padding: 2px;
   margin-top: 10px;
   width: calc(100% / 7 - 5px);
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   text-align: center;
   opacity: 0;
   top: 20px;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
@@ -119,31 +142,38 @@
 }
 
 .dayweather:nth-child(1) {
-  transition-delay: 0.2s;
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
 }
 
 .dayweather:nth-child(2) {
-  transition-delay: 0.3s;
+  -webkit-transition-delay: 0.3s;
+          transition-delay: 0.3s;
 }
 
 .dayweather:nth-child(3) {
-  transition-delay: 0.4s;
+  -webkit-transition-delay: 0.4s;
+          transition-delay: 0.4s;
 }
 
 .dayweather:nth-child(4) {
-  transition-delay: 0.5s;
+  -webkit-transition-delay: 0.5s;
+          transition-delay: 0.5s;
 }
 
 .dayweather:nth-child(5) {
-  transition-delay: 0.6s;
+  -webkit-transition-delay: 0.6s;
+          transition-delay: 0.6s;
 }
 
 .dayweather:nth-child(6) {
-  transition-delay: 0.7s;
+  -webkit-transition-delay: 0.7s;
+          transition-delay: 0.7s;
 }
 
 .dayweather:nth-child(7) {
-  transition-delay: 0.8s;
+  -webkit-transition-delay: 0.8s;
+          transition-delay: 0.8s;
 }
 
 .moon {
@@ -152,21 +182,44 @@
   position: absolute;
   left: 50px;
   top: 100px;
-  transform: translateX(-12px) translateY(-12px);
+  -webkit-transform: translateX(-12px) translateY(-12px);
+          transform: translateX(-12px) translateY(-12px);
   border-radius: 100%;
-  box-shadow: 12px 12px 0 0 #FFD633;
-  animation: moon 50s both;
-  transition-duration: 0.5s;
+  -webkit-box-shadow: 12px 12px 0 0 #FFD633;
+          box-shadow: 12px 12px 0 0 #FFD633;
+  -webkit-animation: moon 50s both;
+          animation: moon 50s both;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+@-webkit-keyframes moon {
+  0% {
+    -webkit-transform: translateX(-15px) translateY(15px);
+            transform: translateX(-15px) translateY(15px);
+    -webkit-box-shadow: 15px -15px 0 0 #FFD633;
+            box-shadow: 15px -15px 0 0 #FFD633;
+  }
+  100% {
+    -webkit-transform: translateX(30px) translateY(-30px);
+            transform: translateX(30px) translateY(-30px);
+    -webkit-box-shadow: -30px 30px 0 0 #FFD633;
+            box-shadow: -30px 30px 0 0 #FFD633;
+  }
 }
 
 @keyframes moon {
   0% {
-    transform: translateX(-15px) translateY(15px);
-    box-shadow: 15px -15px 0 0 #FFD633;
+    -webkit-transform: translateX(-15px) translateY(15px);
+            transform: translateX(-15px) translateY(15px);
+    -webkit-box-shadow: 15px -15px 0 0 #FFD633;
+            box-shadow: 15px -15px 0 0 #FFD633;
   }
   100% {
-    transform: translateX(30px) translateY(-30px);
-    box-shadow: -30px 30px 0 0 #FFD633;
+    -webkit-transform: translateX(30px) translateY(-30px);
+            transform: translateX(30px) translateY(-30px);
+    -webkit-box-shadow: -30px 30px 0 0 #FFD633;
+            box-shadow: -30px 30px 0 0 #FFD633;
   }
 }
 
@@ -179,9 +232,12 @@
   left: 200px;
   bottom: 50px;
   z-index: 24;
-  animation: floating 3s infinite;
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
-  transition-duration: 0.5s;
+  -webkit-animation: floating 3s infinite;
+          animation: floating 3s infinite;
+  -webkit-box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
 }
 
 .cloud::before, .cloud::after {
@@ -202,15 +258,33 @@
   left: 35px;
 }
 
-@keyframes floating {
+@-webkit-keyframes floating {
   0% {
-    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
   }
   50% {
-    transform: translateY(-5px);
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
   }
   100% {
-    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes floating {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  50% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
   }
 }
 
@@ -218,46 +292,70 @@
   width: 2px;
   height: 10px;
   background-color: #f3f3f3;
-  animation: rain 1s infinite linear;
+  -webkit-animation: rain 1s infinite linear;
+          animation: rain 1s infinite linear;
   left: 45px;
   bottom: 15px;
-  transition-duration: 0.5s;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
 }
 
 .rain2 {
-  animation-delay: -0.4s;
+  -webkit-animation-delay: -0.4s;
+          animation-delay: -0.4s;
   left: 70px;
   bottom: 20px;
 }
 
 .rain3 {
-  animation-delay: -0.7s;
+  -webkit-animation-delay: -0.7s;
+          animation-delay: -0.7s;
   left: 30px;
   bottom: 20px;
 }
 
-@keyframes rain {
+@-webkit-keyframes rain {
   0% {
-    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
     opacity: 1;
   }
   70% {
     opacity: 0.4;
   }
   100% {
-    transform: translateY(60px);
+    -webkit-transform: translateY(60px);
+            transform: translateY(60px);
+    opacity: 0;
+  }
+}
+
+@keyframes rain {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.4;
+  }
+  100% {
+    -webkit-transform: translateY(60px);
+            transform: translateY(60px);
     opacity: 0;
   }
 }
 
 .temsvg {
   width: 100%;
-  transition-duration: 0.5s;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
 }
 
 .temsvg circle {
   fill: white;
   opacity: 0.05;
+  -webkit-transition: 0.5s 0s;
   transition: 0.5s 0s;
 }
 
@@ -266,14 +364,17 @@
   stroke: white;
   stroke-width: 1px;
   opacity: 0.05;
+  -webkit-transition: 0.5s 0.2s;
   transition: 0.5s 0.2s;
 }
 
 .temsvg text {
   fill: #f3f3f3;
   opacity: 0;
+  -webkit-transition: 0.5s 0.5s;
   transition: 0.5s 0.5s;
-  transform: translateX(-8px) translateY(25px);
+  -webkit-transform: translateX(-8px) translateY(25px);
+          transform: translateX(-8px) translateY(25px);
   font-size: 10px;
 }
 
@@ -298,7 +399,8 @@ label {
 }
 
 #switch_night:checked + .top .temsvg text {
-  transform: translateX(-8px) translateY(20px);
+  -webkit-transform: translateX(-8px) translateY(20px);
+          transform: translateX(-8px) translateY(20px);
 }
 
 #switch_night:checked + .top .cloud {
