--- a/dev/css/index.css
+++ b/dev/css/index.css
@@ -44,7 +44,8 @@ table {
 }
 
 *, *::before, *::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 button {
@@ -105,7 +106,8 @@ html, body {
 }
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 button.btnA_XLwRA {
@@ -116,6 +118,7 @@ button.btnA_XLwRA {
   border: 1px solid #222222;
   background-color: white;
   outline: 0px !important;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -129,6 +132,7 @@ button.btnA_XLwRA::after {
   border-bottom: 1px solid #222222;
   left: 8px;
   top: 8px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -136,6 +140,7 @@ button.btnA_XLwRA p {
   position: absolute;
   top: 7px;
   left: 20px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -147,6 +152,7 @@ button.btnA_XLwRA div.btnArrowXL {
   height: 0;
   border-style: solid;
   border-width: 9px 0 0 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent transparent #222222;
 }
@@ -160,6 +166,7 @@ button.btnA_XLwRA div.btnArrowXL::before {
   height: 0;
   border-style: solid;
   border-width: 9px 0 0 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent transparent white;
 }
@@ -170,6 +177,7 @@ button.btnA_XLwRA div.btnArrowXL::after {
   width: 40px;
   height: 2px;
   left: -40px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   background-color: #222222;
 }
@@ -185,12 +193,14 @@ button.btnA_XLwRA:hover::after {
   border-bottom: 0px;
   left: 0px;
   top: 0px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
 button.btnA_XLwRA:hover p {
   color: white;
-  transform: translate(5px, 5px);
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
 }
 
 button.btnA_XLwRA:hover {
@@ -199,7 +209,8 @@ button.btnA_XLwRA:hover {
 }
 
 button.btnA_XLwRA:hover div {
-  transform: translate(5px, 5px);
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
   border-color: transparent transparent transparent white;
 }
 
@@ -219,6 +230,7 @@ button.btnA_XLwLA {
   border: 1px solid #222222;
   background-color: white;
   outline: 0px !important;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -232,6 +244,7 @@ button.btnA_XLwLA::after {
   border-bottom: 1px solid #222222;
   left: 8px;
   top: 8px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -239,6 +252,7 @@ button.btnA_XLwLA p {
   position: absolute;
   top: 7px;
   left: 95px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -250,6 +264,7 @@ button.btnA_XLwLA div.btnArrowXL {
   height: 0;
   border-style: solid;
   border-width: 0 0 9px 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent #222222 transparent;
 }
@@ -263,6 +278,7 @@ button.btnA_XLwLA div.btnArrowXL::before {
   height: 0;
   border-style: solid;
   border-width: 0 0 9px 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent white transparent;
 }
@@ -274,6 +290,7 @@ button.btnA_XLwLA div.btnArrowXL::after {
   height: 2px;
   left: -9px;
   top: 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   background-color: #222222;
 }
@@ -289,12 +306,14 @@ button.btnA_XLwLA:hover::after {
   border-bottom: 0px;
   left: 0px;
   top: 0px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
 button.btnA_XLwLA:hover p {
   color: white;
-  transform: translate(5px, 5px);
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
 }
 
 button.btnA_XLwLA:hover {
@@ -303,7 +322,8 @@ button.btnA_XLwLA:hover {
 }
 
 button.btnA_XLwLA:hover div {
-  transform: translate(5px, 5px);
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
   border-color: transparent transparent white transparent;
 }
 
@@ -323,6 +343,7 @@ button.btnA_LwRA {
   border: 1px solid #222222;
   background-color: white;
   outline: 0px !important;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -336,6 +357,7 @@ button.btnA_LwRA::after {
   border-bottom: 1px solid #222222;
   left: 8px;
   top: 8px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -343,6 +365,7 @@ button.btnA_LwRA p {
   position: absolute;
   top: 7px;
   left: 3px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -354,6 +377,7 @@ button.btnA_LwRA div.btnArrowL {
   height: 0;
   border-style: solid;
   border-width: 9px 0 0 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent transparent #222222;
 }
@@ -367,6 +391,7 @@ button.btnA_LwRA div.btnArrowL::before {
   height: 0;
   border-style: solid;
   border-width: 9px 0 0 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent transparent white;
 }
@@ -377,6 +402,7 @@ button.btnA_LwRA div.btnArrowL::after {
   width: 22px;
   height: 2px;
   left: -22px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   background-color: #222222;
 }
@@ -392,12 +418,14 @@ button.btnA_LwRA:hover::after {
   border-bottom: 0px;
   left: 0px;
   top: 0px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
 button.btnA_LwRA:hover p {
   color: white;
-  transform: translate(5px, 5px);
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
 }
 
 button.btnA_LwRA:hover {
@@ -406,7 +434,8 @@ button.btnA_LwRA:hover {
 }
 
 button.btnA_LwRA:hover div {
-  transform: translate(5px, 5px);
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
   border-color: transparent transparent transparent white;
 }
 
@@ -426,6 +455,7 @@ button.btnA_LwLA {
   border: 1px solid #222222;
   background-color: white;
   outline: 0px !important;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -439,6 +469,7 @@ button.btnA_LwLA::after {
   border-bottom: 1px solid #222222;
   left: 8px;
   top: 8px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -446,6 +477,7 @@ button.btnA_LwLA p {
   position: absolute;
   top: 7px;
   left: 33px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -457,6 +489,7 @@ button.btnA_LwLA div.btnArrowL {
   height: 0;
   border-style: solid;
   border-width: 0 0 9px 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent #222222 transparent;
 }
@@ -470,6 +503,7 @@ button.btnA_LwLA div.btnArrowL::before {
   height: 0;
   border-style: solid;
   border-width: 0 0 9px 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent white transparent;
 }
@@ -481,6 +515,7 @@ button.btnA_LwLA div.btnArrowL::after {
   height: 2px;
   left: -8.5px;
   top: 8px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   background-color: #222222;
 }
@@ -496,12 +531,14 @@ button.btnA_LwLA:hover::after {
   border-bottom: 0px;
   left: 0px;
   top: 0px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
 button.btnA_LwLA:hover p {
   color: white;
-  transform: translate(5px, 5px);
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
 }
 
 button.btnA_LwLA:hover {
@@ -510,7 +547,8 @@ button.btnA_LwLA:hover {
 }
 
 button.btnA_LwLA:hover div {
-  transform: translate(5px, 5px);
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
   border-color: transparent transparent white transparent;
 }
 
@@ -530,6 +568,7 @@ button.btnA_L {
   border: 1px solid #222222;
   background-color: white;
   outline: 0px !important;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -543,6 +582,7 @@ button.btnA_L::after {
   border-bottom: 1px solid #222222;
   left: 8px;
   top: 8px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -550,6 +590,7 @@ button.btnA_L p {
   position: absolute;
   top: 7px;
   left: 7px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -564,12 +605,14 @@ button.btnA_L:hover::after {
   border-bottom: 0px;
   left: 0px;
   top: 0px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
 button.btnA_L:hover p {
   color: white;
-  transform: translate(5px, 5px);
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
 }
 
 button.btnA_L:hover {
@@ -585,6 +628,7 @@ button.btnA_MwRA {
   border: 1px solid #222222;
   background-color: white;
   outline: 0px !important;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -598,6 +642,7 @@ button.btnA_MwRA::after {
   border-bottom: 1px solid #222222;
   left: 8px;
   top: 8px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -609,6 +654,7 @@ button.btnA_MwRA div.btnArrowM {
   height: 0;
   border-style: solid;
   border-width: 9px 0 0 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent transparent #222222;
 }
@@ -622,6 +668,7 @@ button.btnA_MwRA div.btnArrowM::before {
   height: 0;
   border-style: solid;
   border-width: 9px 0 0 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent transparent white;
 }
@@ -632,6 +679,7 @@ button.btnA_MwRA div.btnArrowM::after {
   width: 22px;
   height: 2px;
   left: -22px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   background-color: #222222;
 }
@@ -647,6 +695,7 @@ button.btnA_MwRA:hover::after {
   border-bottom: 0px;
   left: 0px;
   top: 0px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -656,7 +705,8 @@ button.btnA_MwRA:hover {
 }
 
 button.btnA_MwRA:hover div {
-  transform: translate(5px, 5px);
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
   border-color: transparent transparent transparent white;
 }
 
@@ -676,6 +726,7 @@ button.btnA_MwLA {
   border: 1px solid #222222;
   background-color: white;
   outline: 0px !important;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -689,6 +740,7 @@ button.btnA_MwLA::after {
   border-bottom: 1px solid #222222;
   left: 8px;
   top: 8px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -700,6 +752,7 @@ button.btnA_MwLA div.btnArrowM {
   height: 0;
   border-style: solid;
   border-width: 0 0 9px 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent #222222 transparent;
 }
@@ -713,6 +766,7 @@ button.btnA_MwLA div.btnArrowM::before {
   height: 0;
   border-style: solid;
   border-width: 0 0 9px 9px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   border-color: transparent transparent white transparent;
 }
@@ -724,6 +778,7 @@ button.btnA_MwLA div.btnArrowM::after {
   height: 2px;
   left: -9px;
   top: 8px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
   background-color: #222222;
 }
@@ -739,6 +794,7 @@ button.btnA_MwLA:hover::after {
   border-bottom: 0px;
   left: 0px;
   top: 0px;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -748,7 +804,8 @@ button.btnA_MwLA:hover {
 }
 
 button.btnA_MwLA:hover div {
-  transform: translate(5px, 5px);
+  -webkit-transform: translate(5px, 5px);
+          transform: translate(5px, 5px);
   border-color: transparent transparent white transparent;
 }
 
@@ -779,6 +836,7 @@ button.btnA_S::after {
   position: absolute;
   left: 0;
   top: 100%;
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -786,7 +844,9 @@ button.btnA_S p {
   z-index: 2;
   font-size: 10px;
   font-weight: 500;
-  transform: translate(-2px, 0px);
+  -webkit-transform: translate(-2px, 0px);
+          transform: translate(-2px, 0px);
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -806,6 +866,7 @@ button.btnA_S.-active::after {
   background-color: #FFC400;
   position: absolute;
   top: calc(100% - 3px);
+  -webkit-transition: 0s;
   transition: 0s;
 }
 
@@ -836,6 +897,7 @@ button.btnB_XL_blue::after {
 button.btnB_XL_blue p {
   z-index: 1;
   color: white;
+  -webkit-transition: 0.4s all ease-in-out;
   transition: 0.4s all ease-in-out;
 }
 
@@ -860,7 +922,9 @@ button.btnB_XL_blue div.bg::after {
   width: 130%;
   height: 100%;
   background-color: white;
-  transform: skewX(15deg);
+  -webkit-transform: skewX(15deg);
+          transform: skewX(15deg);
+  -webkit-transition: 0.3s all ease-in-out;
   transition: 0.3s all ease-in-out;
 }
 
@@ -894,6 +958,7 @@ button.btnB_XL_yellow::after {
 button.btnB_XL_yellow p {
   z-index: 1;
   color: white;
+  -webkit-transition: 0.4s all ease-in-out;
   transition: 0.4s all ease-in-out;
 }
 
@@ -918,7 +983,9 @@ button.btnB_XL_yellow div.bg::after {
   width: 130%;
   height: 100%;
   background-color: white;
-  transform: skewX(15deg);
+  -webkit-transform: skewX(15deg);
+          transform: skewX(15deg);
+  -webkit-transition: 0.3s all ease-in-out;
   transition: 0.3s all ease-in-out;
 }
 
@@ -952,6 +1019,7 @@ button.btnB_L_blue::after {
 button.btnB_L_blue p {
   z-index: 1;
   color: white;
+  -webkit-transition: 0.3s all ease-in-out;
   transition: 0.3s all ease-in-out;
 }
 
@@ -976,7 +1044,9 @@ button.btnB_L_blue div.bg::after {
   width: 130%;
   height: 100%;
   background-color: white;
-  transform: skewX(15deg);
+  -webkit-transform: skewX(15deg);
+          transform: skewX(15deg);
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -1010,6 +1080,7 @@ button.btnB_L_yellow::after {
 button.btnB_L_yellow p {
   z-index: 1;
   color: white;
+  -webkit-transition: 0.3s2all ease-in-out;
   transition: 0.3s2all ease-in-out;
 }
 
@@ -1034,7 +1105,9 @@ button.btnB_L_yellow div.bg::after {
   width: 130%;
   height: 100%;
   background-color: white;
-  transform: skewX(15deg);
+  -webkit-transform: skewX(15deg);
+          transform: skewX(15deg);
+  -webkit-transition: 0.2s all ease-in-out;
   transition: 0.2s all ease-in-out;
 }
 
@@ -1044,6 +1117,18 @@ button.btnB_L_yellow:hover p {
 
 button.btnB_L_yellow:hover div.bg::after {
   left: 0%;
+}
+
+@-webkit-keyframes toolliptextshow {
+  0% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 @keyframes toolliptextshow {
@@ -1058,11 +1143,12 @@ button.btnB_L_yellow:hover div.bg::after {
   }
 }
 
-@keyframes meteorfalls {
+@-webkit-keyframes meteorfalls {
   0% {
     opacity: 0;
     height: 11px;
-    transform: skewX(-15deg) translateY(0px);
+    -webkit-transform: skewX(-15deg) translateY(0px);
+            transform: skewX(-15deg) translateY(0px);
   }
   15% {
     opacity: 0.5;
@@ -1079,12 +1165,47 @@ button.btnB_L_yellow:hover div.bg::after {
   90% {
     opacity: 0;
     height: 11px;
-    transform: skewX(-15deg) translateY(220px);
+    -webkit-transform: skewX(-15deg) translateY(220px);
+            transform: skewX(-15deg) translateY(220px);
   }
   100% {
     opacity: 0;
     height: 11px;
-    transform: skewX(-15deg) translateY(0px);
+    -webkit-transform: skewX(-15deg) translateY(0px);
+            transform: skewX(-15deg) translateY(0px);
+  }
+}
+
+@keyframes meteorfalls {
+  0% {
+    opacity: 0;
+    height: 11px;
+    -webkit-transform: skewX(-15deg) translateY(0px);
+            transform: skewX(-15deg) translateY(0px);
+  }
+  15% {
+    opacity: 0.5;
+    height: 20px;
+  }
+  50% {
+    height: 100px;
+    opacity: 0.85;
+  }
+  80% {
+    opacity: 0.5;
+    height: 150px;
+  }
+  90% {
+    opacity: 0;
+    height: 11px;
+    -webkit-transform: skewX(-15deg) translateY(220px);
+            transform: skewX(-15deg) translateY(220px);
+  }
+  100% {
+    opacity: 0;
+    height: 11px;
+    -webkit-transform: skewX(-15deg) translateY(0px);
+            transform: skewX(-15deg) translateY(0px);
   }
 }
 
@@ -1119,7 +1240,8 @@ ul li a span {
 }
 
 a.active + div.fp-tooltip.right {
-  animation: toolliptextshow 2s ease both !important;
+  -webkit-animation: toolliptextshow 2s ease both !important;
+          animation: toolliptextshow 2s ease both !important;
 }
 
 div.bg {
@@ -1140,6 +1262,7 @@ div.bg div.bgbox img {
   left: calc(-1000px + 50vw);
   bottom: calc(-3vh);
   position: fixed;
+  -webkit-transition: 0.2s all linear;
   transition: 0.2s all linear;
 }
 
@@ -1178,55 +1301,64 @@ div#section4 div.meteor .dot {
 
 div#section4 div.meteor .dot1 {
   left: 15vw;
-  animation: meteorfalls 2s both ease infinite 0.5s;
+  -webkit-animation: meteorfalls 2s both ease infinite 0.5s;
+          animation: meteorfalls 2s both ease infinite 0.5s;
   bottom: 90vh;
 }
 
 div#section4 div.meteor .dot2 {
   left: 22vw;
-  animation: meteorfalls 2.5s both linear infinite -1.5s;
+  -webkit-animation: meteorfalls 2.5s both linear infinite -1.5s;
+          animation: meteorfalls 2.5s both linear infinite -1.5s;
   bottom: 87vh;
 }
 
 div#section4 div.meteor .dot3 {
   left: 33vw;
-  animation: meteorfalls 1.6s both linear infinite 1s;
+  -webkit-animation: meteorfalls 1.6s both linear infinite 1s;
+          animation: meteorfalls 1.6s both linear infinite 1s;
   bottom: 92vh;
 }
 
 div#section4 div.meteor .dot4 {
   left: 40vw;
-  animation: meteorfalls 2.1s both ease-out infinite 1.1s;
+  -webkit-animation: meteorfalls 2.1s both ease-out infinite 1.1s;
+          animation: meteorfalls 2.1s both ease-out infinite 1.1s;
   bottom: 79vh;
 }
 
 div#section4 div.meteor .dot5 {
   left: 43vw;
-  animation: meteorfalls 1.1s both ease infinite 0.2s;
+  -webkit-animation: meteorfalls 1.1s both ease infinite 0.2s;
+          animation: meteorfalls 1.1s both ease infinite 0.2s;
   bottom: 82vh;
 }
 
 div#section4 div.meteor .dot6 {
   left: 51vw;
-  animation: meteorfalls 0.7s both linear infinite 0.1s;
+  -webkit-animation: meteorfalls 0.7s both linear infinite 0.1s;
+          animation: meteorfalls 0.7s both linear infinite 0.1s;
   bottom: 93vh;
 }
 
 div#section4 div.meteor .dot7 {
   left: 66vw;
-  animation: meteorfalls 2s both ease-in infinite 0.3s;
+  -webkit-animation: meteorfalls 2s both ease-in infinite 0.3s;
+          animation: meteorfalls 2s both ease-in infinite 0.3s;
   bottom: 82vh;
 }
 
 div#section4 div.meteor .dot8 {
   left: 80vw;
-  animation: meteorfalls 2.4s both linear infinite 2s;
+  -webkit-animation: meteorfalls 2.4s both linear infinite 2s;
+          animation: meteorfalls 2.4s both linear infinite 2s;
   bottom: 90vh;
 }
 
 div#section4 div.meteor .dot9 {
   left: 89vw;
-  animation: meteorfalls 1.7s both linear infinite 0.7s;
+  -webkit-animation: meteorfalls 1.7s both linear infinite 0.7s;
+          animation: meteorfalls 1.7s both linear infinite 0.7s;
   bottom: 91vh;
 }
 /*# sourceMappingURL=index.css.map */
