--- a/dev/css/jquery.fullpage.css
+++ b/dev/css/jquery.fullpage.css
@@ -16,6 +16,7 @@ html.fp-enabled,
 
 .fp-section {
   position: relative;
+  -webkit-box-sizing: border-box;
   /* Safari<=5 Android<=3 */
   /* <=28 */
   box-sizing: border-box;
@@ -35,6 +36,7 @@ html.fp-enabled,
   height: 100%;
   overflow: hidden;
   position: relative;
+  -webkit-transition: all 0.3s ease-out;
   /* Safari<=6 Android<=4.3 */
   transition: all 0.3s ease-out;
 }
@@ -74,6 +76,7 @@ html.fp-enabled,
   height: 0;
   border-style: solid;
   margin-top: -38px;
+  -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 
@@ -104,6 +107,7 @@ html.fp-enabled,
 }
 
 .fp-notransition {
+  -webkit-transition: none !important;
   transition: none !important;
 }
 
@@ -128,6 +132,7 @@ html.fp-enabled,
   position: absolute;
   z-index: 4;
   opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   left: 0 !important;
   right: 0;
@@ -194,6 +199,7 @@ html.fp-enabled,
   left: 50%;
   top: 50%;
   margin: -2px 0 0 -2px;
+  -webkit-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
 
@@ -221,6 +227,7 @@ html.fp-enabled,
 
 #fp-nav ul li:hover .fp-tooltip,
 #fp-nav.fp-show-active a.active + .fp-tooltip {
+  -webkit-transition: opacity 0.2s ease-in;
   transition: opacity 0.2s ease-in;
   width: auto;
   opacity: 1;
