--- a/dev/css/login.css
+++ b/dev/css/login.css
@@ -11,6 +11,8 @@ header {
 main {
   max-width: 1200px;
   margin: 150px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
