--- a/dev/css/match_info.css
+++ b/dev/css/match_info.css
@@ -4,6 +4,8 @@ div.wrap {
 }
 
 div.wrap div.leader {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -11,7 +13,8 @@ div.wrap div.leader div.leader_headtag img {
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 div.wrap div.leader div.leader_info {
@@ -19,6 +22,8 @@ div.wrap div.leader div.leader_info {
 }
 
 div.wrap div.leader div.leader_info div.leader_name-badge {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: auto 0;
 }
@@ -36,6 +41,8 @@ div.wrap div.leader div.leader_info div.leader_introduction {
 }
 
 div.wrap div.public_pic-activity {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -46,14 +53,20 @@ div.wrap div.public_pic-activity div.public_pic {
 div.wrap div.public_pic-activity div.public_pic img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 div.wrap div.public_pic-activity div.activity {
   width: 50%;
   margin-left: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 div.wrap div.public_pic-activity div.activity h3.activity_title {
@@ -61,8 +74,12 @@ div.wrap div.public_pic-activity div.activity h3.activity_title {
 }
 
 div.wrap div.public_pic-activity div.activity div.activity_report {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0 20px;
 }
 
@@ -73,8 +90,12 @@ div.wrap div.public_pic-activity div.activity div.activity_report div.report div
 }
 
 div.wrap div.public_pic-activity div.activity div.info_icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-evenly;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   padding: 10px 0;
@@ -117,6 +138,8 @@ div.wrap div.public_pic-activity div.activity div.applied_participant h4 {
 }
 
 div.wrap div.public_pic-activity div.activity div.applied_participant div.applied_participant_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -128,10 +151,13 @@ div.wrap div.public_pic-activity div.activity div.applied_participant div.applie
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 div.wrap div.public_pic-activity div.activity div.applied_participant div.applied_participant_block div.applied_participant_item div.applied_participant_name-badge {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -158,6 +184,8 @@ div.wrap div.related_pic h3 {
 }
 
 div.wrap div.related_pic div.related_pic_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: 10px;
 }
@@ -169,10 +197,13 @@ div.wrap div.related_pic div.related_pic_block div.related_pic_item {
 
 div.wrap div.related_pic div.related_pic_block div.related_pic_item img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 div.wrap div.introduction-application_block div.introduction-application_bt {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -225,8 +256,13 @@ div.wrap div.introduction-application_block div.introduction-application_info .a
 }
 
 div.wrap div.message .leave_message_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 div.wrap div.message .leave_message_block textarea {
