--- a/dev/css/post.css
+++ b/dev/css/post.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: 'Roboto', Helvetica , "儷黑 Pro", "LiHei Pro", "微軟正黑體", "Microsoft JhengHei",Arial,sans-serif;
@@ -52,8 +53,11 @@ div.forum_post {
 }
 
 #form-table {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 5% 0;
 }
 
@@ -89,6 +93,8 @@ div.forum_post {
 
 .custom_select {
   /* 清除掉預設外觀 */
+  -webkit-appearance: none;
+  -moz-appearance: none;
   appearance: none;
   outline: none;
   background: none;
@@ -125,11 +131,14 @@ div.forum_post {
   width: 50px;
   height: 50px;
   color: #fff;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#86baff), to(#956bda));
   background-image: linear-gradient(to top, #86baff, #956bda);
   line-height: 50px;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
   text-align: center;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+          box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 #aside-link {
